<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Received_Reply"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="427dp"
        android:text="Reply Received"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:background="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/Replied_Message"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_marginBottom="208dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Received_Reply"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="274dp"
        android:layout_height="63dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="Enter your text here"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Replied_Message"
        app:layout_constraintVertical_bias="0.913" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="66dp"
        android:onClick="SEND"
        android:text="Send"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/Replied_Message"
        app:layout_constraintVertical_bias="0.921" />


</androidx.constraintlayout.widget.ConstraintLayout>